Switched from JQ, other improvements and refactoring.

--- a/ChromeDroid TabMan.csproj
+++ b/ChromeDroid TabMan.csproj
@@ -7,4 +7,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JQ.NET" Version="1.0.4" />
+  </ItemGroup>
+
 </Project>
