Laid foundation for adding export to SQLite option

--- a/ChromeDroid TabMan.csproj
+++ b/ChromeDroid TabMan.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="JQ.NET" Version="1.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.17" />
   </ItemGroup>
 
 </Project>
