--- a/ChromeDroid TabMan.csproj
+++ b/ChromeDroid TabMan.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AdvancedSharpAdbClient" Version="2.5.8" />
+    <PackageReference Include="BookmarksManager" Version="2.0.0" />
     <PackageReference Include="JQ.NET" Version="1.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.17" />
   </ItemGroup>
