Added PrettyBin It addes a post build target to a project, that moves dlls to a "lib" subfolder, and modifies app.config to look there

--- a/ChromeDroid TabMan.csproj
+++ b/ChromeDroid TabMan.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <RootNamespace>ChromeDroid_TabMan</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +13,7 @@
     <PackageReference Include="BookmarksManager" Version="2.0.0" />
     <PackageReference Include="JQ.NET" Version="1.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.17" />
+    <PackageReference Include="PrettyBin" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
