[Reorganizaton] Split "Connection and Import" into separate directories.

--- a/ChromeDroid TabMan.csproj
+++ b/ChromeDroid TabMan.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Import\" />
+  </ItemGroup>
+
 </Project>
